--- a/dynsem/metaborg.yaml
+++ b/dynsem/metaborg.yaml
@@ -1,38 +1,37 @@
 ---
-id: org.metaborg:dynsem:${metaborgVersion}
-name: ds
-metaborgVersion: 2.0.0-SNAPSHOT
-dependencies:
-  compile:
-  - org.metaborg:org.metaborg.meta.lang.esv:${metaborgVersion}
-  - org.metaborg:org.metaborg.meta.lang.template:${metaborgVersion}
-  source:
-  - org.metaborg:org.metaborg.meta.lib.analysis:${metaborgVersion}
-exports:
-- directory: ./
-  includes:
-  - lib/JavaCompilationUnit-15.tbl
+metaborgVersion: "2.0.0-SNAPSHOT"
 pardonedLanguages:
-- EditorService
-- Stratego-Sugar
-- SDF
+- "EditorService"
+- "Stratego-Sugar"
+- "SDF"
 build:
- useBuildSystemSpec: true
+  useBuildSystemSpec: true
+exports:
+  includes: "lib/JavaCompilationUnit-15.tbl"
+  directory: "./"
+name: "ds"
 language:
   stratego:
-    format: jar
     args:
-    - -la
-    - stratego-lib
-    - -la
-    - stratego-sglr
-    - -la
-    - stratego-gpp
-    - -la
-    - stratego-xtc
-    - -la
-    - stratego-aterm
-    - -la
-    - stratego-sdf
-    - -la
-    - strc
+    - "-la"
+    - "stratego-lib"
+    - "-la"
+    - "stratego-sglr"
+    - "-la"
+    - "stratego-gpp"
+    - "-la"
+    - "stratego-xtc"
+    - "-la"
+    - "stratego-aterm"
+    - "-la"
+    - "stratego-sdf"
+    - "-la"
+    - "strc"
+    format: "jar"
+id: "org.metaborg:dynsem:${metaborgVersion}"
+dependencies:
+  compile:
+  - "org.metaborg:org.metaborg.meta.lang.stratego:2.0.1"
+  - "org.metaborg:org.metaborg.meta.lang.esv:2.0.3"
+  - "org.metaborg:org.metaborg.meta.lang.template:2.0.3"
+  source: "org.metaborg:org.metaborg.meta.lib.analysis:2.0.3"
